@@ -679,7 +679,7 @@ static int prepare_database(layerObj *layer, rectObj rect, char **query_string)
 }
 
 /* Execute SQL query for this layer */
-int msMSSQL2008LayerWhichShapes(layerObj *layer, rectObj rect)
+int msMSSQL2008LayerWhichShapes(layerObj *layer, rectObj rect, in isQuery)
 {
     msMSSQL2008LayerInfo  *layerinfo = 0;
     char    *query_str = 0;
@@ -1901,7 +1901,7 @@ int msMSSQL2008LayerInitItemInfo(layerObj *layer)
     return MS_FAILURE;
 }
 
-int msMSSQL2008LayerWhichShapes(layerObj *layer, rectObj rect)
+int msMSSQL2008LayerWhichShapes(layerObj *layer, rectObj rect, int isQuery)
 {
     msSetError(MS_QUERYERR, "msMSSQL2008LayerWhichShapes called but unimplemented!(mapserver not compiled with MSSQL2008 support)", "msMSSQL2008LayerWhichShapes()");
     return MS_FAILURE;
