@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
+- Fix performance issue with Oracle and scrollable cursors (#3905)
+
 - Fix attribute binding for layer styles (#3941)
 
 - Added missing fclose() when writing query files (#3943)
